tests/invalid/runtime/io_write_type_text.pts
import Io;
import Fs;

function main() : void {
    string path = Io.tempPath();
    TextFile f = Io.openText(path, "w");
    try {
        var data = [1, 2, 3];
        f.write(data);
    } finally {
        f.close();
        if (Fs.exists(path)) Fs.rm(path);
    }
}
